# oxidized-git-2

./: Cargo.toml  build.rs
images/: right_arrow.aseprite
src/: frontend.rs  git_functions.rs  main.rs
src/backend/: git_functions.rs  git_utils.rs  mod.rs
src/frontend/: app.rs  branch_tree.rs  commit_graph.rs  mod.rs  modals.rs  tab.rs  utils.rs
src/images/: down_arrow.aseprite
src/ui/: hello.slint
