[package]
name = "oxidized-git-2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.*"
egui = "0.23.*"
eframe = "0.23.*"
image = { version = "0.24.*", features = ["png"] }
rfd = "0.12.*"
directories = "5.0.*"
git2 = "0.18.*"
